qa-etl/apps/sftp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftp-server
  namespace: cqdg-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sftp-server
  template:
    metadata:
      labels:
        app: sftp-server
    spec:
      containers:
      - name: sftp
        image: atmoz/sftp:latest
        ports:
        - containerPort: 22
        volumeMounts:
        - mountPath: /home
          name: sftp-data
      volumes:
      - name: sftp-data
        persistentVolumeClaim:
          claimName: sftp-pvc
      nodeSelector:
        node: number4
