qa-etl/apps/sftp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sftp-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - sftp-qa.etl.juno.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: sftp-qa.etl.juno.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sftp-server-service
              port:
                number: 8888
